<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/app_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/airport"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/buses"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sydney"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/wheelchair"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/maxi"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <Button
                    android:id="@+id/btn_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectangle_border_blue"
                    android:text="Call +61 481 700 500"
                    android:textColor="@android:color/white"
                    android:textSize="22dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>