<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/app_icon" />


                <Button
                    android:id="@+id/btn_aps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rectangle_border_blue"
                    android:text="@string/aps"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <Button
                    android:id="@+id/btn_css"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rectangle_border_blue"
                    android:text="@string/css"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <Button
                    android:id="@+id/btn_gts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rectangle_border_blue"
                    android:text="@string/gts"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="Exclusive Offer"
                    android:textColor="@android:color/white"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/note"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FBBA35" />

                <Button
                    android:id="@+id/btn_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectangle_border_blue"
                    android:text="Call +61 481 700 500"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>

